--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
         <groupId>com.easyshop</groupId>
         <artifactId>easyshop-backend</artifactId>
         <version>1.0.0</version>
-        <relativePath>../pom.xml</relativePath>
+        <relativePath>../easyshop-parent/pom.xml</relativePath>
     </parent>
 
     <artifactId>api-gateway</artifactId>
@@ -49,11 +49,10 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Lombok (version explicit; processing configured in parent) -->
+        <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.32</version>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
