--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,19 +8,33 @@ spring:
   application:
     name: api-gateway
   config:
-    import: optional:configserver:${CONFIG_SERVER_URI:http://config-server:8888}
+    import: optional:configserver:${CONFIG_SERVER_URI}
   cloud:
     config:
-      username: ${CONFIG_SERVER_USER:configuser}
-      password: ${CONFIG_SERVER_PASSWORD:configpass}
+      username: ${CONFIG_SERVER_USER}
+      password: ${CONFIG_SERVER_PASSWORD}
       fail-fast: false
       retry:
         initial-interval: 1000
         max-attempts: 6
         max-interval: 2000
         multiplier: 1.1
+    gateway:
+      routes:
+        - id: auth
+          uri: ${AUTH_SERVICE_URL}
+          predicates:
+            - Path=/auth/**
+        - id: products
+          uri: ${PRODUCT_SERVICE_URL}
+          predicates:
+            - Path=/products/**
+        - id: purchases
+          uri: ${PURCHASE_SERVICE_URL}
+          predicates:
+            - Path=/purchases/**
   profiles:
-    active: ${SPRING_PROFILES_ACTIVE:local}
+    active: ${SPRING_PROFILES_ACTIVE}
 
 # Service-specific configuration (will be overridden by Config Server)
 server:
