--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,41 +1,22 @@
 # =============================================================================
 # EasyShop API Gateway Bootstrap Configuration
 # =============================================================================
-# This file contains only the minimal configuration needed to connect to Config Server.
-# All other configuration is provided by Config Server.
+# This file points the service to the external Config Server.
 
 spring:
   application:
     name: api-gateway
   config:
-    import: optional:configserver:${CONFIG_SERVER_URI}
+    import: optional:configserver:${CONFIG_SERVER_URI:http://localhost:8888}
   cloud:
     config:
-      username: ${CONFIG_SERVER_USER}
-      password: ${CONFIG_SERVER_PASSWORD}
+      username: ${CONFIG_SERVER_USER:configuser}
+      password: ${CONFIG_SERVER_PASSWORD:configpass}
       fail-fast: false
       retry:
         initial-interval: 1000
         max-attempts: 6
         max-interval: 2000
         multiplier: 1.1
-    gateway:
-      routes:
-        - id: auth
-          uri: ${AUTH_SERVICE_URL}
-          predicates:
-            - Path=/auth/**
-        - id: products
-          uri: ${PRODUCT_SERVICE_URL}
-          predicates:
-            - Path=/products/**
-        - id: purchases
-          uri: ${PURCHASE_SERVICE_URL}
-          predicates:
-            - Path=/purchases/**
   profiles:
-    active: ${SPRING_PROFILES_ACTIVE}
-
-# Service-specific configuration (will be overridden by Config Server)
-server:
-  port: 8080
+    active: ${SPRING_PROFILES_ACTIVE:local}
